==========
Change log
==========

1.0.1 (unreleased)
==================

- When two users are exporting at the same time this could end in
  broken export files.


1.0.0 (2009-12-29)
==================

- Translated UI into German.

- Displaying modification date of adresses now.

- Dropped some package dependencies which existed for compatibility
  reasons with older versions. To upgrade to this version you might
  need to upgrade to 0.5.4 first. (See Update_.)


0.5.4 (2009-12-20)
==================

- Users which are defined inside an address book having the
  `Administrator` role, were not able to edit address book entities.


0.5.3 (2009-11-22)
==================

- After the last fix `delete all persons` did not delete any
  persons. This is now fixed.


0.5.2 (2009-11-21)
==================

- `Delete all persons` no longer tries to delete the persons which are
  users. Previously this function broke when there were users defined
  in the address book.

- Moved the function to delete a whole address book to the overview
  page of all address books, as users defined inside an address book
  are not allowed to delete their address book.


0.5.1 (2009-11-21)
==================

- Fixed namespace package declaration so the package can be installed
  on a plain vanilla python (even without setuptools installed).


0.5 (2009-11-21)
================

Features
--------

- Users having the role `Administrator` can delete all persons in the
  address book or even the whole address book on the address book edit
  form.

- Last modification time of objects is now stored and displayed (in
  UTC!).

- Users having the role `Administrator` can import data in the master
  data area.

- Added ability to enter additional packages names at installation
  (e. g. to install a specific import file readers).

- Users having the role `Administrator` can add new fields to address
  book entities in the master data area. These fields as useable for
  editors and visitors, too.
